--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "localforage-cordovasqlitedriver": "^1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
