--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "5.0.1",
     "@capacitor/haptics": "5.0.1",
     "@capacitor/keyboard": "5.0.1",
+    "@capacitor/screen-orientation": "^5.0.2",
     "@capacitor/status-bar": "5.0.1",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
